fix(#523): session/blocked users markup is not flickering (#534)

--- a/src/pages/settings/privacy-security/blocked-users/blocked-users.scss
+++ b/src/pages/settings/privacy-security/blocked-users/blocked-users.scss
@@ -8,10 +8,7 @@
     line-height: 17px;
     margin-top: 32px;
     color: var(--dt-white-wt-dark);
-  }
-
-  &__content {
-    margin-top: 32px;
+    margin-bottom: 32px;
   }
 
   &__header {
